checker/tests/nullness-extra/compat/Expected.txt
CompatTest.java:6: error: [assignment] incompatible types in assignment.
    @NonNull Object o = Lib.maybeGetObject();
                                          ^
  found   : @Initialized @Nullable Object
  required: @UnknownInitialization @NonNull Object
1 error
